@@ -1,3 +1,8 @@
+2010-05-09  El Dragon  <thedragon@the-dragons-nest.co.uk>
+
+	* VorbisFile.cs: Altered FileStream initialisation to prevent
+	  sharing violation when used in conjunction with TagLibSharp
+
 2010-04-16  El Dragon  <thedragon@the-dragons-nest.co.uk>
 
 	* Lpc.cs:
