@@ -1,3 +1,8 @@
+2010-05-09  El Dragon  <thedragon@the-dragons-nest.co.uk>
+
+	* File.cs: Altered FileStream initialisation to prevent
+	  sharing violation when used in conjunction with CSVorbis
+
 2010-04-16  El Dragon  <thedragon@the-dragons-nest.co.uk>
 
 	* Tag.cs:
